# streamlit-ouath

./: main.py  pyproject.toml
.github/workflows/: test.yaml
.streamlit/: config.toml
streamlit_oauth/authenticator/: auth_manager.py  config.py  login_page.py
streamlit_oauth/pages/: __init__.py  dashboard.py
streamlit_oauth/services/db/: s3_connector.py
streamlit_oauth/services/ml_model/: model.py
streamlit_oauth/utils/: formattor.py
