[tool.poetry]
name = "streamlit-oauth"
version = "0.1.0"
description = ""
authors = ["James Neale <42097394+james9226@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "streamlit_oauth"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
pandas = "^1.5.0"
numpy = "^1.23.3"
seaborn = "^0.12.0"
streamlit = "^1.13.0"
PyJWT = "^2.6.0"
httpx-oauth = "^0.11.0"
bokeh = "2.4.3"
extra-streamlit-components = "^0.1.56"
streamlit-cookies-manager = "0.2.0"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
mkdocs-material = "^9.0.11"
mkdocs-table-reader-plugin = "^2.0"
mkdocs-glightbox = "^0.3.1"
black = "^22.10.0"
mkdocs = "^1.4.0"
flake8 = "^5.0.4"
mypy = "^1.1.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "httplib2",
    "pandas",
]
ignore_missing_imports = true
